force-app/main/default/objects/AVO_Rest_API_Settings__c/AVO_Rest_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to store the variable used in Salesforce to SharePoint Integration Rest API</description>
    <label>AVO Rest API Settings</label>
</CustomObject>