force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Base_Directory__c.field-meta.xml
<CustomField>
    <fullName>AVO_Base_Directory__c</fullName>
    <label>Base Directory</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>