force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Client_ID__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>