force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>AVO_Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>