force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Grant_Type__c</fullName>
    <label>Grant Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>