force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Resource__c.field-meta.xml
<CustomField>
    <fullName>AVO_Resource__c</fullName>
    <label>Resource</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>