force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>AVO_Salesforce_URL__c</fullName>
    <label>Salesforce URL</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>