force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_SharePoint_Integration__c.field-meta.xml
<CustomField>
    <fullName>AVO_SharePoint_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SharePoint Integration</label>
    <type>Checkbox</type>
</CustomField>