force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Url__c</fullName>
    <label>Site Url</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>