force-app/main/default/objects/AVO_Rest_API_Settings__c/fields/AVO_Token_End_Point__c.field-meta.xml
<CustomField>
    <fullName>AVO_Token_End_Point__c</fullName>
    <label>Token End Point</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>